policy/overlays/nerc-ocp-prod/validate-class-example.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredOPEPod
metadata:
  name: validate-ope-pods
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["rhods-notebooks"]
    labelSelector:
      matchLabels:
        nerc.mghpcc.org/class: fake_class
  parameters:
    allowed_images:
      - image: "image-registry.openshift-image-registry.svc:5000/redhat-ods-applications/ucsls-f24:latest"
        name: "ucsls-F24"
      - image: "image-registry.openshift-image-registry.svc:5000/redhat-ods-applications/base-ope-image:latest"
        name: "Base OPE Image"
    resource_size: "X Small"
