policy/overlays/nerc-ocp-prod/validate-ope-pods-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredOPEPod
metadata:
  name: validate-ope-pods
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["rhods-notebooks", "ope-rhods-testing-1fef2f"]
  parameters:
    image: "image-registry.openshift-image-registry.svc:5000/redhat-ods-applications/ucsls-nerc-rhoai:latest"
